--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,55 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  box-sizing: border-box;
+}
+
+:focus, :active, a:focus, a:active {
+  outline: none;
+}
+
+a, a:visited, a:hover {
+  text-decoration: none;
+}
+
+ul li {
+  list-style: none;
+}
+
+h1, h2, h3 {
+  font-size: inherit;
+  font-weight: inherit;
+}
+
+// Fonts
+
+@font-face {
+  font-family: "Inter 700";
+  src: local("Inter Bold");
+  src: url("fonts/Inter Bold/Inter Bold.ttf") format("truetype");
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: "Inter 600";
+  src: local("Inter Semi Bold");
+  src: url("fonts/Inter Semi Bold/Inter Semi Bold.ttf") format("truetype");
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: "Inter 500";
+  src: local("Inter Medium");
+  src: url("fonts/Inter Medium/Inter Medium.ttf") format("truetype");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "Inter 400";
+  src: local("Inter Regular");
+  src: url("fonts/Inter Regular/Inter Regular.ttf") format("truetype");
+  font-weight: 400;
+}
