--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,4 +1,8 @@
 <div class="login">
+  <div class="login__tooltip">
+    <div *host></div>
+  </div>
+
   <img class="logo-icon" src="../../../../assets/logo.svg" alt="logo">
   <div class="login-wrapper">
     <h1 class="login__title">Добро пожаловать</h1>
