--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -7,6 +7,15 @@
 .login {
   margin: 274px auto;
 
+  &__tooltip {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 68px;
+    right: 50px;
+    gap: 10px;
+  }
+
   &-wrapper {
     margin: 0 auto;
     max-width: 410px;
