--- a/src/app/auth/components/dashboard/dashboard.component.html
+++ b/src/app/auth/components/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
 
   <div class="dashboard-wrapper-buttons button">
     <button (click)="callTooltip('Сообщение об ошибке')" class="button__fail">Ошибка</button>
-    <button (click)="callTooltip('Пердупредительное сообщение', '6px solid #FCCA00','#FCCA00')" class="button__warning">Предупреждение</button>
+    <button (click)="callTooltip('Предупредительное сообщение', '6px solid #FCCA00','#FCCA00')" class="button__warning">Предупреждение</button>
     <button (click)="callTooltip('Сообщение об успехе', '6px solid #249F5D', '#249F5D')" class="button__success">Успех</button>
     <button (click)="callTooltip(message, '6px solid #4C54F4', '#4C54F4')" class="button__message">Сообщение</button>
   </div>
