--- a/src/app/auth/components/dashboard/dashboard.component.html
+++ b/src/app/auth/components/dashboard/dashboard.component.html
@@ -4,12 +4,12 @@
   </div>
 
   <div class="dashboard-wrapper">
-    <img class="dashboard__icon" [src]="avatar" alt="avatar-icon" >
+    <img class="dashboard__icon" src="../../../../assets/avatar.jpg" alt="avatar-icon" >
     <div class="dashboard-wrapper-info">
-      <p class="dashboard__name-text">{{name}}</p>
+      <p class="dashboard__name-text">Ivan</p>
       <p class="dashboard__id-text">
         ID пользователя:
-        <span class="dashboard__span-id">{{ID}}</span>
+        <span class="dashboard__span-id">0</span>
       </p>
     </div>
   </div>
